--- a/CSSpart/style.css
+++ b/CSSpart/style.css
@@ -41,4 +41,6 @@ a {
 a.home,
 a:hover {
   background: linear-gradient(45deg, #f06, #3cf);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
