--- a/CSSpart/style.css
+++ b/CSSpart/style.css
@@ -49,12 +49,13 @@ a:hover {
   align-items: center;
 }
 .homed {
-  margin-left: ;
   margin-right: 20px;
   color: white;
   text-align: right;
   background-color: red;
-  max-width: 600px;
+  width: 60%;
+  padding-left: 50px;
+  padding-right: 10px;
 }
 .homed h1 {
   font-size: 25px;
@@ -109,6 +110,9 @@ button:hover {
 }
 .imgn {
   background: green;
-  height: 500px;
+  height: 400px;
   width: 500px;
+  margin-left: 50px;
+  border-radius: 500px;
+  border: 20px solid white;
 }
