--- a/CSSpart/style.css
+++ b/CSSpart/style.css
@@ -53,7 +53,7 @@ a:hover {
   color: white;
   text-align: right;
 
-  width: 60%;
+  width: 50%;
   padding-left: 50px;
   padding-right: 10px;
 }
@@ -63,8 +63,26 @@ a:hover {
   text-align: center;
 }
 .homed h2 {
-  font-size: 20px;
+  font-size: 40px;
   margin-right: 40px;
+  color: transparent;
+  -webkit-text-stroke: 0.5px white;
+  background-image: linear-gradient(#00abf0, #00abf0);
+  background-repeat: no-repeat;
+  -webkit-background-clip: text;
+  background-position: -410 0;
+  animation: animateText 6s linear infinite;
+}
+@keyframes animateText {
+  0%,
+  95%,
+  100% {
+    background-position: -410px 0;
+  }
+  65%,
+  85% {
+    background-position: 0 0;
+  }
 }
 p {
   font-size: 15px;
@@ -94,6 +112,8 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  left: 0px;
 }
 .icons img:hover {
   border-color: greens;
@@ -109,17 +129,20 @@ button:hover {
   background-color: #b9601c;
 }
 .imgn {
+  width: 40%;
   height: 400px;
-  width: 500px;
-  margin-left: 30px;
-  border-radius: 50%;
+  margin-left: 20px;
 
-  background-color: #fff;
+  margin-bottom: 50px;
+  background-color: transparent;
+  outline: 30px #bfc1c5;
 }
 .imgn img {
   max-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: auto;
 
-  padding-right: 10px;
-  border-radius: 60%;
-  padding-top: 15px;
+  border-radius: 100%;
 }
